--- a/ui/src/styles/colors.scss
+++ b/ui/src/styles/colors.scss
@@ -1,7 +1,10 @@
 
-$background: rgb(13, 17, 23);
-$background--100: rgb(22, 27, 34);
-$background--200: rgb(33, 38, 45);
+$background: #010409;
+$background--100: #0d1117;
+$background--200: #161b22;
+
+$border-color: #30363d;
 
 $primary: rgb(230, 237, 243);
 $secondary: rgb(132, 141, 151);
+$error: #ff6666;
