--- a/ui/src/styles/typography.scss
+++ b/ui/src/styles/typography.scss
@@ -1,6 +1,6 @@
 @import "@styles/colors.scss";
 
 * {
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color:  $primary;
 }
