--- a/ui/src/styles/colors.scss
+++ b/ui/src/styles/colors.scss
@@ -3,6 +3,9 @@ $background: #010409;
 $background--100: #0d1117;
 $background--200: #161b22;
 
+$scrollbar: #545c66;
+$scrollbar--hover: #8c949f;
+
 $border-color: #30363d;
 
 $primary: rgb(230, 237, 243);
