Cleanup child processes before exiting; add better error logs.

--- a/ui/src/components/error-tracker/ErrorTracker.module.scss
+++ b/ui/src/components/error-tracker/ErrorTracker.module.scss
@@ -11,8 +11,9 @@
     span {
         color: $error;
     }
+}
 
-    .groupName {
-        font-weight: 600;
-    }
+.groupName {
+    color: $error;
+    font-weight: bold;
 }
