--- a/ui/src/styles/colors.scss
+++ b/ui/src/styles/colors.scss
@@ -11,4 +11,5 @@ $border-color: #30363d;
 $primary: rgb(230, 237, 243);
 $secondary: rgb(132, 141, 151);
 $error: #ff6666;
+$error-header: #f7d5d5;
 $warning: #ffde5c;
