--- a/ui/src/components/error-tracker/ErrorTracker.module.scss
+++ b/ui/src/components/error-tracker/ErrorTracker.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     gap: 8px;
 
-    & > * {
+    .errorWrapper {
         border-left: 1px solid $error-header;
         padding: 4px 12px;
         margin: 4px 0;
