--- a/ui/src/components/request-handler/dialogs/ValueRequestDialog.module.scss
+++ b/ui/src/components/request-handler/dialogs/ValueRequestDialog.module.scss
@@ -1,3 +1,4 @@
+@import "@styles/colors.scss";
 
 .dialog {
     display: flex;
@@ -18,4 +19,43 @@
     gap: 16px;
     justify-content: flex-end;
     width: 100%;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.recommendedOptions {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    p {
+        font-size: 18px;
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+        flex-wrap: wrap;
+        max-height: 100px;
+        overflow: auto;
+        border: 1px solid $background;
+        border-radius: 4px;
+        padding: 8px;
+
+        button {
+            border: none;
+            font-size: 16px;
+            padding: 8px 12px;
+            background: $background--200;
+            border-radius: 4px;
+            border: 1px solid $background--100;
+            cursor: pointer;
+        }
+    }
 }
