Add a restarting indicator; fix autoscroll button styling issue; add better support for non-group child logs affecting group status

--- a/ui/src/components/utils/AutoScrollable/index.module.scss
+++ b/ui/src/components/utils/AutoScrollable/index.module.scss
@@ -10,7 +10,7 @@
 }
 
 .scrollButton {
-    position: absolute;
+    position: absolute !important;
     right: 24px;
     bottom: 16px;
     pointer-events: all;
