--- a/ui/src/pages/dashboard/dashboard.module.scss
+++ b/ui/src/pages/dashboard/dashboard.module.scss
@@ -1,4 +1,4 @@
-@import "@styles/colors.scss";
+@import "@styles/colors.module.scss";
 
 .page {
     display: grid;
@@ -18,4 +18,18 @@
 
 .rightSide {
 
+}
+
+.bottom {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 75px;
+    width: 100%;
+    background: $background--100;
+    border-top: 1px solid $border-color;
 }
