--- a/ui/src/styles/colors.module.scss
+++ b/ui/src/styles/colors.module.scss
@@ -15,3 +15,9 @@ $error: #ff6666;
 $error-header: #f7d5d5;
 $warning: #ffde5c;
 $restarting: #63b8ff;
+
+$btn-primary: #205178;
+
+:export {
+    btnPrimary: $btn-primary;
+}
