--- a/ui/src/styles/typography.scss
+++ b/ui/src/styles/typography.scss
@@ -1,4 +1,4 @@
-@import "@styles/colors.scss";
+@import "@styles/colors.module.scss";
 
 * {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
